--- a/estilos.css
+++ b/estilos.css
@@ -19,7 +19,7 @@ body{
   padding: 0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
   color: var(--text);
-  background: var(--bg);
+  background: var(--brand-2);
 }
 
 img{
@@ -413,4 +413,5 @@ a:hover{
     grid-template-columns: 1fr;
   }
 }
+
 
