--- a/estilos.css
+++ b/estilos.css
@@ -19,7 +19,7 @@ body{
   padding: 0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
   color: var(--text);
-  background: var(--brand-2);
+  
 }
 
 img{
@@ -141,6 +141,7 @@ a:hover{
 
 .destaque{
   padding: 48px 0 24px;
+  background: var(--brand-2);
 }
 
 .grade-destaque{
@@ -329,7 +330,11 @@ a:hover{
 .rodape-site{
   border-top: 1px solid var(--line);
   padding: 18px 0;
-  background: #fff;
+  background: black;
+}
+
+footer p{
+  color: white;
 }
 
 .grade-rodape{
@@ -343,6 +348,7 @@ a:hover{
   border: 1px solid var(--line);
   padding: 6px 10px;
   border-radius: 8px;
+  background: white;
 }
 
 .aviso{
@@ -413,5 +419,6 @@ a:hover{
     grid-template-columns: 1fr;
   }
 }
+
 
 
